<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:background="@color/white"
    tools:context=".ui.fragments.HomeFragment">

    <androidx.cardview.widget.CardView
        android:id="@+id/main_card_view"
        style="@style/MainCardInHomeFragment"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/lottie_animation_view"
        style="@style/LottieAnimationView"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_view_Title"
        style="@style/TextViewTitle"
        android:text="@string/let_s_get_vaccinated"
        app:layout_constraintLeft_toLeftOf="@id/lottie_animation_view"
        app:layout_constraintRight_toRightOf="@id/lottie_animation_view"
        app:layout_constraintTop_toBottomOf="@+id/lottie_animation_view" />

    <TextView
        android:id="@+id/text_View_in_main_card"
        style="@style/TextViewTitleTwo"
        android:text="@string/free_safe_protected"
        app:layout_constraintLeft_toLeftOf="@id/text_view_Title"
        app:layout_constraintRight_toRightOf="@id/text_view_Title"
        app:layout_constraintTop_toBottomOf="@+id/text_view_Title" />


    <ScrollView
        android:id="@+id/scroll_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:scrollbars="none"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/main_card_view">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraint_in_scroll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <androidx.cardview.widget.CardView
                android:id="@+id/my_first_card"
                style="@style/Card_View_Home_Fragment"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <TextView
                android:id="@+id/text_view_header_inside_first_card"
                style="@style/Text_Details_Home_Fragment"
                android:text="@string/benefits_of_covid_19_vaccine"
                app:layout_constraintEnd_toEndOf="@id/my_first_card"
                app:layout_constraintStart_toStartOf="@id/my_first_card"
                app:layout_constraintTop_toTopOf="@id/my_first_card" />

            <ImageView
                android:id="@+id/shapeable_image_view_one"
                style="@style/shapable_image_view_home_fragment"
                android:src="@drawable/immunity"
                app:layout_constraintEnd_toEndOf="@id/my_first_card"
                app:layout_constraintTop_toBottomOf="@+id/text_view_header_inside_first_card" />

            <TextView
                android:id="@+id/text_view_one_inside_first_card"
                style="@style/Text_Describe_Home_Fragment.MarginTop"
                android:text="@string/builds_your_immune_system"
                app:layout_constraintLeft_toLeftOf="@id/my_first_card"
                app:layout_constraintTop_toBottomOf="@id/text_view_header_inside_first_card" />

            <TextView
                android:id="@+id/text_view_two_inside_first_card"
                style="@style/Text_Describe_Home_Fragment"
                android:text="@string/protect_you_from_severe_sickness_and_complications"
                app:layout_constraintLeft_toLeftOf="@id/my_first_card"
                app:layout_constraintTop_toBottomOf="@id/text_view_one_inside_first_card" />

            <TextView
                android:id="@+id/text_view_three_inside_first_card"
                style="@style/Text_Describe_Home_Fragment"
                android:text="@string/reduces_your_risk_of_hospitalization"
                app:layout_constraintLeft_toLeftOf="@id/my_first_card"
                app:layout_constraintTop_toBottomOf="@id/text_view_two_inside_first_card" />

            <androidx.cardview.widget.CardView
                android:id="@+id/my_second_card"
                style="@style/Card_View_Home_Fragment"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/my_first_card" />

            <TextView
                android:id="@+id/text_view_header_inside_second_card"
                style="@style/Text_Details_Home_Fragment.SecondaryBrandColor"
                android:text="@string/some_of_covid_19_companies"
                app:layout_constraintEnd_toEndOf="@id/my_second_card"
                app:layout_constraintStart_toStartOf="@id/my_second_card"
                app:layout_constraintTop_toTopOf="@id/my_second_card" />

            <ImageView
                android:id="@+id/shapeable_image_view_two"
                style="@style/shapable_image_view_home_fragment"
                android:src="@drawable/vaccine_icon"
                app:layout_constraintBottom_toBottomOf="@id/my_second_card"
                app:layout_constraintEnd_toEndOf="@id/my_second_card"
                app:layout_constraintTop_toBottomOf="@+id/text_view_header_inside_second_card" />

            <TextView
                android:id="@+id/text_view_one_inside_second_card"
                style="@style/Text_Describe_Home_Fragment.MarginTop"
                android:text="@string/pfizer_biontech"
                app:layout_constraintLeft_toLeftOf="@id/my_second_card"
                app:layout_constraintTop_toBottomOf="@id/text_view_header_inside_second_card" />

            <TextView
                android:id="@+id/text_view_two_inside_second_card"
                style="@style/Text_Describe_Home_Fragment"
                android:text="@string/oxford_uni_astrazeneca"
                app:layout_constraintLeft_toLeftOf="@id/my_second_card"
                app:layout_constraintTop_toBottomOf="@id/text_view_one_inside_second_card" />

            <TextView
                android:id="@+id/text_view_three_inside_second_card"
                style="@style/Text_Describe_Home_Fragment"
                android:text="@string/moderna_company"
                app:layout_constraintLeft_toLeftOf="@id/my_second_card"
                app:layout_constraintTop_toBottomOf="@id/text_view_two_inside_second_card" />




            <androidx.cardview.widget.CardView
                android:id="@+id/my_third_card"
                style="@style/Card_View_Home_Fragment"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/my_second_card" />

            <TextView
                android:id="@+id/text_view_header_inside_third_card"
                style="@style/Text_Details_Home_Fragment"
                android:text="@string/the_facts_of_vaccines"
                app:layout_constraintEnd_toEndOf="@id/my_third_card"
                app:layout_constraintStart_toStartOf="@id/my_third_card"
                app:layout_constraintTop_toTopOf="@id/my_third_card" />

            <ImageView
                android:id="@+id/shapeable_image_view_three"
                style="@style/shapable_image_view_home_fragment"
                android:src="@drawable/checked"
                app:layout_constraintEnd_toEndOf="@id/my_third_card"
                app:layout_constraintTop_toBottomOf="@+id/text_view_header_inside_third_card" />

            <TextView
                android:id="@+id/text_view_one_inside_third_card"
                style="@style/Text_Describe_Home_Fragment.MarginTop"
                android:text="@string/safe_for_pregnant_and_breastfeeding_women"
                app:layout_constraintLeft_toLeftOf="@id/my_third_card"
                app:layout_constraintTop_toBottomOf="@id/text_view_header_inside_third_card" />

            <TextView
                android:id="@+id/text_view_two_inside_third_card"
                style="@style/Text_Describe_Home_Fragment"
                android:text="@string/previous_infection_doesnt_qualify_as_protection"
                app:layout_constraintLeft_toLeftOf="@id/my_third_card"
                app:layout_constraintTop_toBottomOf="@id/text_view_one_inside_third_card" />

            <TextView
                android:id="@+id/text_view_three_inside_third_card"
                style="@style/Text_Describe_Home_Fragment"
                android:text="@string/reduces_symptoms_if_you_get_covid"
                app:layout_constraintLeft_toLeftOf="@id/my_third_card"
                app:layout_constraintTop_toBottomOf="@id/text_view_two_inside_third_card" />

            <androidx.cardview.widget.CardView
                android:id="@+id/my_fourth_card"
                style="@style/Card_View_Home_Fragment"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/my_third_card" />

            <TextView
                android:id="@+id/text_view_header_inside_fourth_card"
                style="@style/Text_Details_Home_Fragment.SecondaryBrandColor"
                android:text="@string/covid_19_vaccine_side_effects"
                app:layout_constraintEnd_toEndOf="@id/my_fourth_card"
                app:layout_constraintStart_toStartOf="@id/my_fourth_card"
                app:layout_constraintTop_toTopOf="@id/my_fourth_card" />

            <ImageView
                android:id="@+id/shapeable_image_view_four"
                style="@style/shapable_image_view_home_fragment"
                android:src="@drawable/patient"
                app:layout_constraintBottom_toBottomOf="@id/my_fourth_card"
                app:layout_constraintEnd_toEndOf="@id/my_fourth_card"
                app:layout_constraintTop_toBottomOf="@+id/text_view_header_inside_fourth_card" />

            <TextView
                android:id="@+id/text_view_one_inside_fourth_card"
                style="@style/Text_Describe_Home_Fragment.MarginTop"
                android:text="@string/sore_arm"
                app:layout_constraintLeft_toLeftOf="@id/my_fourth_card"
                app:layout_constraintTop_toBottomOf="@id/text_view_header_inside_fourth_card" />

            <TextView
                android:id="@+id/text_view_two_inside_fourth_card"
                style="@style/Text_Describe_Home_Fragment"
                android:text="@string/headache"
                app:layout_constraintLeft_toLeftOf="@id/my_fourth_card"
                app:layout_constraintTop_toBottomOf="@id/text_view_one_inside_fourth_card" />

            <TextView
                android:id="@+id/text_view_three_inside_fourth_card"
                style="@style/Text_Describe_Home_Fragment"
                android:text="@string/fever_or_chills"
                app:layout_constraintLeft_toLeftOf="@id/my_fourth_card"
                app:layout_constraintTop_toBottomOf="@id/text_view_two_inside_fourth_card" />

            <TextView
                android:id="@+id/text_view_four_inside_fourth_card"
                style="@style/Text_Describe_Home_Fragment"
                android:text="@string/muscle_aches_or_soreness"
                app:layout_constraintLeft_toLeftOf="@id/my_fourth_card"
                app:layout_constraintTop_toBottomOf="@id/text_view_three_inside_fourth_card" />


            <androidx.cardview.widget.CardView
                android:id="@+id/my_fifth_card"
                style="@style/Card_View_Home_Fragment"
                android:layout_marginBottom="16dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/my_fourth_card" />


            <TextView
                android:id="@+id/text_view_header_inside_fifth_card"
                style="@style/Text_Details_Home_Fragment"
                android:text="@string/what_to_do_about_side_effects"
                app:layout_constraintEnd_toEndOf="@id/my_fifth_card"
                app:layout_constraintStart_toStartOf="@id/my_fifth_card"
                app:layout_constraintTop_toTopOf="@id/my_fifth_card" />

            <ImageView
                android:id="@+id/shapeable_image_view_fifth"
                style="@style/shapable_image_view_home_fragment"
                android:src="@drawable/prescription"
                app:layout_constraintEnd_toEndOf="@id/my_fifth_card"
                app:layout_constraintTop_toBottomOf="@+id/text_view_header_inside_fifth_card" />

            <TextView
                android:id="@+id/text_view_one_inside_fifth_card"
                style="@style/Text_Describe_Home_Fragment.MarginTop"
                android:text="@string/move_your_arm_apply_an_ice_pack"
                app:layout_constraintLeft_toLeftOf="@id/my_fifth_card"
                app:layout_constraintTop_toBottomOf="@id/text_view_header_inside_fifth_card" />

            <TextView
                android:id="@+id/text_view_two_inside_fifth_card"
                style="@style/Text_Describe_Home_Fragment"
                android:text="@string/rest_when_needed"
                app:layout_constraintLeft_toLeftOf="@id/my_fifth_card"
                app:layout_constraintTop_toBottomOf="@id/text_view_one_inside_fifth_card" />

            <TextView
                android:id="@+id/text_view_three_inside_fifth_card"
                style="@style/Text_Describe_Home_Fragment"
                android:text="@string/take_it_easy_take_pain_reliever"
                app:layout_constraintLeft_toLeftOf="@id/my_fifth_card"
                app:layout_constraintTop_toBottomOf="@id/text_view_two_inside_fifth_card" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>