<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/ParentCard.maxHeight"
    tools:background="@color/white"
    tools:context=".ui.vaccines.VaccineDetailsFragment">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/about_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5"/>

    <View
        android:id="@+id/upper_background"
        android:layout_width="match_parent"
        android:layout_height="220dp"
        android:background="@color/brandColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <ImageButton
        android:background="@drawable/arrow_back"
        android:id="@+id/go_back_button"
        android:visibility="visible"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:elevation="6dp" />


    <ImageView
        android:id="@+id/vaccineImage"
        style="@style/MainCardImage"
        android:padding="35dp"
        android:elevation="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <androidx.cardview.widget.CardView
        android:id="@+id/vaccine_info_card"
        android:layout_width="0dp"
        android:layout_height="250dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="85dp"
        android:layout_marginEnd="24dp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="20dp"
        app:cardElevation="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="8dp"
        android:text="@string/vaccine_name"
        android:textColor="@color/red"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/vaccine_info_card"
        app:layout_constraintEnd_toEndOf="@+id/vaccine_info_card"
        app:layout_constraintStart_toStartOf="@+id/vaccine_info_card"
        app:layout_constraintTop_toTopOf="@+id/vaccine_info_card"
        app:layout_constraintVertical_bias="0.4" />

    <androidx.cardview.widget.CardView
        android:id="@+id/doses_card"
        android:layout_width="wrap_content"
        android:minWidth="130dp"
        android:layout_height="80dp"
        android:layout_marginStart="20dp"
        app:cardElevation="8dp"
        app:cardCornerRadius="12dp"
        app:layout_constraintEnd_toEndOf="@+id/about_guideline"
        app:layout_constraintBottom_toBottomOf="@+id/vaccine_info_card"
        app:layout_constraintStart_toStartOf="@+id/vaccine_info_card"
        app:layout_constraintTop_toBottomOf="@+id/name"/>

    <TextView
        android:id="@+id/doses_percent"
        style="@style/texts.main"
        android:elevation="10dp"
        android:text="@string/_50"
        app:layout_constraintVertical_bias="0.3"
        android:textColor="@color/secondaryBrandColor"
        app:layout_constraintBottom_toBottomOf="@+id/doses_card"
        app:layout_constraintEnd_toEndOf="@+id/doses_card"
        app:layout_constraintStart_toStartOf="@+id/doses_card"
        app:layout_constraintTop_toTopOf="@+id/doses_card" />

    <TextView
        android:id="@+id/doses_text"
        style="@style/texts.cardDet"
        android:layout_margin="8dp"
        android:gravity="center_horizontal"
        android:text="@string/shots"
        app:layout_constraintBottom_toBottomOf="@+id/doses_card"
        app:layout_constraintEnd_toEndOf="@+id/doses_card"
        app:layout_constraintStart_toStartOf="@+id/doses_card"
        app:layout_constraintTop_toBottomOf="@+id/doses_percent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/efficacy_card"
        android:layout_width="wrap_content"
        android:minWidth="130dp"
        android:layout_height="80dp"
        android:layout_marginEnd="20dp"
        app:cardElevation="8dp"
        app:cardCornerRadius="12dp"
        app:layout_constraintStart_toStartOf="@+id/about_guideline"
        app:layout_constraintBottom_toBottomOf="@+id/vaccine_info_card"
        app:layout_constraintEnd_toEndOf="@+id/vaccine_info_card"
        app:layout_constraintTop_toBottomOf="@+id/name"/>

    <TextView
        android:id="@+id/efficacy_percent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="10dp"
        android:textSize="24sp"
        android:text="@string/_70"
        app:layout_constraintVertical_bias="0.3"
        android:textColor="@color/secondaryBrandColor"
        app:layout_constraintBottom_toBottomOf="@+id/efficacy_card"
        app:layout_constraintEnd_toEndOf="@+id/efficacy_card"
        app:layout_constraintStart_toStartOf="@+id/efficacy_card"
        app:layout_constraintTop_toTopOf="@+id/efficacy_card" />

    <TextView
        android:id="@+id/efficacy_text"
        style="@style/texts.cardDet"
        android:layout_margin="8dp"
        android:gravity="center_horizontal"
        android:text="@string/effectiveness"
        app:layout_constraintEnd_toEndOf="@+id/efficacy_card"
        app:layout_constraintStart_toStartOf="@+id/efficacy_card"
        app:layout_constraintTop_toBottomOf="@+id/efficacy_percent" />


    <TextView
        style="@style/vaccineInfoHeadlines"
        android:id="@+id/description"
        android:text="@string/description"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/vaccine_info_card" />

<ScrollView
    android:layout_width="wrap_content"
    android:layout_height="0dp"
    android:scrollbars="none"
    app:layout_constraintTop_toBottomOf="@id/description"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            style="@style/vaccineInfoHeadlinesDetails"
            android:id="@+id/name_text"
            tools:text="@string/name"
            android:paddingHorizontal="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            style="@style/vaccineInfoHeadlinesDetails"
            android:id="@+id/manufacturer"
            tools:text="@string/Manufacturer"
            android:paddingHorizontal="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/name_text" />


        <TextView
            android:id="@+id/type_text"
            style="@style/vaccineInfoHeadlinesDetails"
            tools:text="@string/type_of_vaccine"
            android:visibility="gone"
            android:paddingHorizontal="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/manufacturer" />

        <TextView
            style="@style/vaccineInfoHeadlinesDetails"
            android:id="@+id/number_text"
            tools:text="@string/number_of_shots"
            android:paddingHorizontal="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/type_text" />

        <TextView
            style="@style/vaccineInfoHeadlinesDetails"
            android:id="@+id/booster_text"
            tools:text="@string/booster_shot"
            android:visibility="gone"
            android:paddingHorizontal="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/number_text" />

        <TextView
            android:id="@+id/how_given_text"
            style="@style/vaccineInfoHeadlinesDetails"
            tools:text="@string/how_given"
            android:paddingHorizontal="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/booster_text" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>